Added a version to the bottom of the about page

--- a/public/index.html
+++ b/public/index.html
@@ -142,8 +142,9 @@
                 </ul>
             </ul>
           </div>
-          <div class="modal-footer" style="justify-content:flex-start; height:20px;">
-            <span style="font-size:10px; text-align:left;">(c) 2018 Renee K. Rodgers</span>
+          <div class="modal-footer justify-content-between" style="height:20px;">
+            <span style="font-size:10px; text-align:left;">Version 1.01</span>
+            <span class="float-right" style="font-size:10px; text-align:end;">(c) 2018 Renee K. Rodgers</span>
           </div>
         </div>
       </div>
