--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       <nav class="navbar navbar-light bg-light">
         <div class="col-sm-2">
           <div class="navbar-header">
-            <a class="navbar-brand" href="">mySpotifyApp</a>
+            <a class="navbar-brand" href="#">mySpotifyApp</a>
           </div>
         </div>
         <div class="col-sm-6">
@@ -43,7 +43,6 @@
           <div class="navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <a id="about-button" class="nav-link" style="text-align-last:end;" href="#" data-toggle="modal" data-target="#about-modal">About</a>
-              <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">About</button>-->
             </ul>
           </div>
         </div>
@@ -54,8 +53,8 @@
           <div class="row justify-content-center text-center" id="login-container">
             <div class="col text-center">
               <h3>Welcome to mySpotifyApp</h3>
-              <p>Please login to Spotify using mySpotifyApp's default login.</p>
-              <a href="/login" class="btn btn-primary btn-center" >Login</a>
+              <p>Please login to Spotify</p>
+              <a id="login-button" href="/login" class="btn btn-primary btn-center" >Login</a>
             </div>
           </div>
 
@@ -143,7 +142,7 @@
             </ul>
           </div>
           <div class="modal-footer justify-content-between" style="height:20px;">
-            <span style="font-size:10px; text-align:left;">Version 1.01</span>
+            <span style="font-size:10px; text-align:left;">Version 1.02</span>
             <span class="float-right" style="font-size:10px; text-align:end;">(c) 2018 Renee K. Rodgers</span>
           </div>
         </div>
