--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/react-autocomplete/1.8.0/react-autocomplete.min.js"></script>
     -->
 
-    <script src=//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js></script>
+    <!--<script src=//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js></script>-->
 
     <script src="js/spotifyLogin.js"></script>
     <script src="js/mySpotifyApp.js"></script>
